Google Ads.html

--- a/Google Ads.html
+++ b/Google Ads.html
@@ -292,7 +292,7 @@
 
     <!-- Footer -->
     <footer>
-      <div class="container">
+      <div class="container darker-grotesque">
         <section class="mt-1">
           <div class="row text-center d-flex justify-content-center pt-5">
             <div class="col-md-2">
