--- a/Coding.html
+++ b/Coding.html
@@ -203,8 +203,8 @@
     <div class="container my-5 cutive-mono-regular">
         <div class="card">
             <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="coding.png" class="img-fluid rounded-start" alt="Coding image">
+                <div class="col-md-4 position-relative">
+                    <img src="coding.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Coding image">
                 </div>
                 <div class="col-md-8 d-flex align-items-center">
                     <div class="card-body text-white" style="text-align: justify;">
