--- a/SEO.html
+++ b/SEO.html
@@ -364,7 +364,7 @@
               </div>
               <div class="col-md-2">
                 <h6 class="text-uppercase font-weight-bold">
-                  <a href="SEO.html" class="text-white">SEO Page</a>
+                  <a href="Google Ads.html" class="text-white">Google Ads</a>
                 </h6>
               </div>
               <div class="col-md-2">
