Google Ads.html

--- a/Google Ads.html
+++ b/Google Ads.html
@@ -243,7 +243,7 @@
             <h5 class="card-title">Shopping Mall Paid Search Campaign</h5>
             <p class="card-text">This open data was used to experiment while learning Google Ads optimization session. Here is the URL of opendata <a href="https://www.kaggle.com/datasets/marceaxl82/shopping-mall-paid-search-campaign-dataset?resource=download" target="_blank">https://www.kaggle.com/datasets/marceaxl82/shopping-mall-paid-search-campaign-dataset?resource=download</a></p>
             <div class="d-grid gap-2 col-3 mx-auto">
-              <button class="btn btn-custom" type="button" onclick="location.href='Ads dataset page.html';">Open Data Analysis</button>
+              <a href="Ads dataset page.html" class="btn btn-custom">Open Data Analysis</a>
             </div>
           </div>
         </div>
