--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="CV page.html">My CV</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#learningOffcanvas" aria-controls="learningOffcanvas">My learning</a>
@@ -300,7 +300,7 @@
       <div class="d-flex justify-content-between align-items-center">
         <ul class="nav ms-5" style="font-size: 20px;">
           <li class="nav-item">
-            <a class="nav-link animate__animated animate__fadeInLeft darker-grotesque" href="#about">About</a>
+            <a class="nav-link animate__animated animate__fadeInLeft darker-grotesque" href="CV page.html">My CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link animate__animated animate__fadeInLeft animate__delay-1s darker-grotesque" href="#" data-bs-toggle="offcanvas" data-bs-target="#learningOffcanvas" aria-controls="learningOffcanvas">My learning</a>
