--- a/SEO.html
+++ b/SEO.html
@@ -314,7 +314,7 @@
     <hr class="my-5">
 
     <!-- Open Source Data Experiment -->
-    <section class="container mb-5">
+    <section class="container mb-5 darker-grotesque">
       <div class="card">
         <div class="card-header text-black fw-bolder">
           Open Source Data Experiment
@@ -432,7 +432,7 @@
         openOffcanvas(`
             <div class="card m-3">
                 <img src="GA4.png" class="card-img-top" alt="Google Analytics 4">
-                <div class="card-body">
+                <div class="card-body darker-grotesque">
                     <h5 class="card-title text-black text-center">Google Analytics (GA4)</h5>
                     <p class="card-text text-justify">Website tracking tool that use for report website traffic. I used the feature that creating custom dashboards and reports to track user engagement, traffic sources, and conversion rates. It can help understand different group of the user behavier to optimize which website have low user experiences that help to improve marketing strategiesand optimizing user experience. Additionally, I used the explorations in Google analytic to customize the data insight that can demonstrate the specific data report.</p>
                     <p class="text-justify">I was sync campaign of the Google Ads to Google analytic to tracking all of traffic when the user have interacted with my Ad. I used Google Analytic track my A/B testing ad to analyzed each data which testing is better performing.</p>
@@ -445,7 +445,7 @@
         openOffcanvas(`
             <div class="card mb-3">
                 <img src="GSC_Shot.png" class="card-img-top" alt="Google Search Console">
-                <div class="card-body">
+                <div class="card-body darker-grotesque">
                     <h5 class="card-title text-black text-center">Google Search Console (GSC)</h5>
                     <p class="card-text text-justify">I used Google Search console for monitoring, maintaining, and sorlving the issue of my website. During I creating my website,  I will consider the structure and make it easily to indexing by Google. Therefore, If I ensure my sitemap have the understandable to indexing of Google then, submitting sitemap to Google Search Console. It can be used for analyze the search performance data, including clicks, impressions, and average position, to understand how user interact with search results and identify opportunities for improvement. Additionally,  I also used the tool to manage website security by addressing issue from my website to solving correctly point.</p>
                 </div>
@@ -456,7 +456,7 @@
     document.getElementById('card3').addEventListener('click', function() {
         openOffcanvas(`
             <div class="card mb-3">
-                <div class="card-body">
+                <div class="card-body darker-grotesque">
                     <h5 class="card-title text-black text-center">Google Tag Manager (GTM)</h5>
                     <p class="card-text text-justify">The tool for managing marketing tags on a website without requiring code change in my website. I have performed includes setting up and configuring Google Tag Manager accounts, mange tags, triggers, and tracking implementation. I was created tags to my blogpost to monitoring engage view, Javascript error, form submission and issues, etc. I applied tag to my conversion ad then, I setup trigger to form submission to receiving valuable insight from user interactions and conversion rate.</p>
                 </div>
@@ -468,7 +468,7 @@
         openOffcanvas(`
             <div class="card mb-3">
                 <img src="YOAST.Shot.png" class="card-img-top" alt="Yoast SEO">
-                <div class="card-body">
+                <div class="card-body darker-grotesque">
                     <h5 class="card-title text-black text-center">Yoast SEO</h5>
                     <p class="card-text text-justify">Yoast SEO works can providing me the on-page optimization features, including keyword analysis, readability checks, and metadata management. I used Yoast SEO to ensure each page and post on my website is optimized for target keywords by following the plugin's recommendations for keyword density, meta descriptions, and internal linking. I used Yoast SEO features to generating XML sitemap with every my webpages and also provide me the information if my website have duplicate content issues.</p>
                 </div>
