Google Ads.html

--- a/Google Ads.html
+++ b/Google Ads.html
@@ -292,9 +292,14 @@
 
     <!-- Footer -->
     <footer>
-      <div class="container darker-grotesque">
+      <div class="container">
         <section class="mt-1">
           <div class="row text-center d-flex justify-content-center pt-5">
+            <div class="col-md-2">
+              <h6 class="text-uppercase font-weight-bold">
+                <a href="https://arduf.github.io/" class="text-white">Home</a>
+              </h6>
+            </div>
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
                 <a href="Coding.html" class="text-white">Coding Page</a>
