--- a/SEO.html
+++ b/SEO.html
@@ -379,6 +379,11 @@
             <div class="row text-center d-flex justify-content-center pt-5">
               <div class="col-md-4 col-lg-2 mb-3">
                 <h6 class="text-uppercase font-weight-bold">
+                  <a href="https://arduf.github.io/" class="text-white">Home</a>
+                </h6>
+              </div>
+              <div class="col-md-4 col-lg-2 mb-3">
+                <h6 class="text-uppercase font-weight-bold">
                   <a href="Coding.html" class="text-white">Coding Page</a>
                 </h6>
               </div>
