--- a/Coding.html
+++ b/Coding.html
@@ -201,22 +201,22 @@
 
     <!-- Mini Project-->
     <div class="container my-5 cutive-mono-regular">
-        <div class="card">
-            <div class="row g-0">
-                <div class="col-md-4 position-relative">
-                    <img src="coding.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Coding image">
-                </div>
-                <div class="col-md-8 d-flex align-items-center">
-                    <div class="card-body text-white" style="text-align: justify;">
-                        <h5 class="card-title mb-4 text-center" style="font-size: 36px;">My mini project</h5>
-                        <p class="card-text">During my time learning to code, I worked on three small projects to improve my skills in HTML, CSS, and JavaScript. These projects helped me get better at making websites that look good and work well.</p>
-                        <p>The first project I made was called BlueReef. I created it to learn how to make websites that look good on both phones and computers. I used HTML, CSS, and Bootstrap to build it. This project taught me how to use Bootstrap, design websites for phones first, and make them look nice on all screens.</p>
-                        <p>Next, I made a project called CarEngine. This one was to help me understand how online shops work. I used HTML, CSS, and JavaScript for this. CarEngine lets you look at products, add them to a cart, and pretend to buy them. I learned how to make websites do things when you click buttons and how to remember what people put in their shopping carts.</p>
-                        <p>The last project was a Login Page. I made this to learn about letting people log in to websites. Like the others, I used HTML, CSS, and JavaScript. This page lets you log in with Google, Facebook, or Apple. It also checks if you typed your name and password correctly. Making this taught me how to use logins from other websites and how to make good forms.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <div class="card">
+          <div class="row g-0">
+              <div class="col-md-4 position-relative">
+                  <img src="coding.png" class="img-fluid h-100 w-100 object-fit-cover" alt="Coding image">
+              </div>
+              <div class="col-md-8 d-flex align-items-center">
+                  <div class="card-body text-white" style="text-align: justify;">
+                      <h5 class="card-title mb-4 text-center" style="font-size: 36px;">My mini project</h5>
+                      <p class="card-text">During my time learning to code, I worked on three small projects to improve my skills in HTML, CSS, and JavaScript. These projects helped me get better at making websites that look good and work well.</p>
+                      <p>The first project I made was called BlueReef. I created it to learn how to make websites that look good on both phones and computers. I used HTML, CSS, and Bootstrap to build it. This project taught me how to use Bootstrap, design websites for phones first, and make them look nice on all screens.</p>
+                      <p>Next, I made a project called CarEngine. This one was to help me understand how online shops work. I used HTML, CSS, and JavaScript for this. CarEngine lets you look at products, add them to a cart, and pretend to buy them. I learned how to make websites do things when you click buttons and how to remember what people put in their shopping carts.</p>
+                      <p>The last project was a Login Page. I made this to learn about letting people log in to websites. Like the others, I used HTML, CSS, and JavaScript. This page lets you log in with Google, Facebook, or Apple. It also checks if you typed your name and password correctly. Making this taught me how to use logins from other websites and how to make good forms.</p>
+                  </div>
+              </div>
+          </div>
+      </div>
     </div>
 
     <!-- Project Showcase -->
@@ -244,17 +244,22 @@
     <footer class="footer text-white py-5 animate__animated animate__fadeInRight">
         <div class="container cutive-mono-regular">
             <div class="row text-center d-flex justify-content-center mb-4">
-                <div class="col-md-4">
+                <div class="col-md-3">
+                    <h6 class="text-uppercase font-weight-bold">
+                      <a href="https://arduf.github.io/" class="text-white">Home</a>
+                    </h6>
+                  </div>
+                <div class="col-md-3">
                     <h6 class="text-uppercase font-weight-bold">
                         <a href="Google Ads.html">Google Ads Page</a>
                     </h6>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <h6 class="text-uppercase font-weight-bold">
                         <a href="SEO.html">SEO Page</a>
                     </h6>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <h6 class="text-uppercase font-weight-bold">
                         <a href="https://thasro.dreamhosters.com/?page_id=1046">WordPress Page</a>
                     </h6>
