--- a/CV page.html
+++ b/CV page.html
@@ -15,6 +15,9 @@
             line-height: 1.3;
             font-size: 11pt;
             margin: 0;
+            padding: 10mm;
+            width: 210mm;
+            height: 297mm;
             box-sizing: border-box;
         }
         .container {
@@ -37,12 +40,11 @@
             font-size: 10pt;
         }
         .profile-image {
-            width: 200px;
-            height: 200px;
+            width: 120px;
+            height: 120px;
             object-fit: cover;
             border-radius: 50%;
             border: 2px solid #007bff;
-            margin-top: 20px;
         }
         h1 {
             font-size: 24pt;
@@ -91,6 +93,12 @@
 
         <section class="mb-3">
             <h2 class="section-title">Work Experience</h2>
+            <div>
+                <p class="mb-0"><strong>Intern, PTTEP</strong> (during university)</p>
+                <ul>
+                    <li>Completed a mini-project in North Sabah, Malaysia, and presented findings at the end of the internship</li>
+                </ul>
+            </div>
             <div class="mb-2">
                 <p class="mb-0"><strong>Geophysicist, Ocean Geophysics Company</strong> (May 2023 - Present)</p>
                 <ul>
@@ -99,23 +107,17 @@
                     <li>Optimize parameters in Globe Caritas software to enhance data quality</li>
                 </ul>
             </div>
-            <div>
-                <p class="mb-0"><strong>Intern, PTTEP</strong> (during university)</p>
-                <ul>
-                    <li>Completed a mini-project in North Sabah, Malaysia, and presented findings at the end of the internship</li>
-                </ul>
-            </div>
         </section>
 
         <section class="mb-3">
             <h2 class="section-title">Skills & Knowledge</h2>
-            <p class="mb-1">Currently expanding expertise through online courses in:</p>
+            <p class="mb-1">Expanding knowledge and certification through online courses in:</p>
             <ul>
                 <li>Digital Marketing fundamentals</li>
                 <li>Search Engine Optimization (SEO)</li>
                 <li>Content Marketing</li>
                 <li>Social Media Marketing</li>
-                <li>Google Ads and PPC</li>
+                <li>Google Ads Optimization</li>
                 <li>Web Development (HTML, CSS, JavaScript, Bootstrap, WordPress)</li>
             </ul>
         </section>
@@ -129,11 +131,6 @@
                 <li>Learning to create and optimize ad campaigns across multiple social media platforms</li>
                 <li>Exploring the use of AI tools like ChatGPT for content research and creation</li>
             </ul>
-        </section>
-
-        <section class="mb-3">
-            <h2 class="section-title">Career Objective</h2>
-            <p>To secure a position in Digital Marketing that allows for continued learning and practical application of acquired skills, with a focus on website optimization and digital marketing strategies.</p>
         </section>
     </div>
 </body>
