--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- content font -->
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Notable&display=swap" rel="stylesheet">
     <!-- head font -->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
     <style>
 
       .darker-grotesque {
@@ -24,10 +24,10 @@
         font-size: 20px;
       }
 
-      .dm-serif-text-regular {
-        font-family: "DM Serif Text", serif;
+      .dm-serif-display-regular-italic {
+        font-family: "DM Serif Display", serif;
         font-weight: 400;
-        font-style: normal;
+        font-style: italic;
       }
 
 
@@ -310,10 +310,10 @@
         <div class="btn-container display-4 fw-bolder text-white">
           <figure class="text-center mb-0">
             <blockquote class="blockquote animate__animated animate__fadeInDown" style="font-size: 48px;">
-              <span class="name-hover dm-serif-text-regular" style="cursor: pointer;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">THAWATCHAI SROIPHO</span>
+              <span class="name-hover dm-serif-display-regular-italic" style="cursor: pointer;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">THAWATCHAI SROIPHO</span>
             </blockquote>
-            <figcaption class="blockquote-footer text-white animate__animated animate__fadeInUp" style="font-size: 12px;">
-              <cite title="Source Title" class="darker-grotesque">Information pages on my name</cite>
+            <figcaption class="blockquote-footer text-white animate__animated animate__fadeInUp" style="font-size: 8px;">
+              <cite title="Source Title" class="darker-grotesque">Click on my name for more!</cite>
             </figcaption>
           </figure>
         </div>
@@ -337,7 +337,7 @@
     <!-- Offcanvas -->
     <div class="offcanvas offcanvas-top h-100" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
       <div class="offcanvas-header">
-          <h2 class="offcanvas-title fw-bold" id="offcanvasTopLabel">My Learning Journey</h2>
+          <h2 class="offcanvas-title fw-bold darker-grotesque" id="offcanvasTopLabel">My Learning Journey</h2>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
 
@@ -396,9 +396,10 @@
             <img src="me.JPEG" class="cover-img rounded-5 img-fluid" alt="Thawatchai Sroipho profile picture">
           </div>
           <div class="paragraph col-12 col-md-6 d-flex flex-column justify-content-center animate-on-scroll">
-            <h1 class="text-center text-md-end animate__animated animate__fadeInRight dm-serif-text-regular" style="font-size: 72px;">DRAF</h1>
-            <p class="text-justify animate__animated animate__fadeInRight" style="text-align: justify;">Hello! I'm Thawatchai Sroipho, a passionate and dedicated web developer with a strong foundation in HTML, CSS, JavaScript, and Bootstrap. I have a keen interest in creating visually appealing and user-friendly web applications. My journey into web development began with a curiosity for how websites work, which quickly turned into a passion for coding and designing functional, beautiful web pages.</p>
-            <p class="text-justify mt-3 animate__animated animate__fadeInRight" style="text-align: justify;">Throughout my learning journey, I have worked on various projects that have helped me hone my skills and develop a deep understanding of web technologies. I believe in the power of continuous learning and am always eager to explore new tools and frameworks to stay updated with industry trends.</p>
+            <h1 class="text-center text-md-end animate__animated animate__fadeInRight dm-serif-display-regular-italic" style="font-size: 72px;">DRAF</h1>
+            <p class="text-justify animate__animated animate__fadeInRight" style="text-align: justify;">Hello, I'm Draf, Thawatchai Sroipho, a passionate and dedicated digital marketer with a strong foundation in digital marketing knowledge and tools. My journey into digital marketing began with a curiosity about the principles of Google's algorithm and how e-commerce works, which quickly turned into a passion for digital marketing fundamentals. I aim to become an expert digital marketer in the future, driven by my motivation to make products profitable.</p>
+            <p class="text-justify mt-3 animate__animated animate__fadeInRight" style="text-align: justify;">Moreover, I've learned coding for website optimization, including HTML, CSS, JavaScript, Bootstrap, and other technologies. My motivation to learn website development stems from understanding that websites are crucial for e-commerce success. Websites can provide excellent UX/UI to audiences, which can drive profitability for our business.</p>
+            <p class="text-justify mt-3 animate__animated animate__fadeInRight" style="text-align: justify;">Throughout my learning journey, I've worked on various projects that have helped me enhance my skills and develop a deep understanding of digital marketing and web technologies. I believe in the power of continuous learning and I'm always eager to explore new tools and frameworks to stay updated with industry trends.</p>
           </div>
         </div>
       </section>
