--- a/Coding.html
+++ b/Coding.html
@@ -234,7 +234,7 @@
             </div>
             <div class="col-md-12">
                 <div class="card my-2">
-                    <iframe class="rounded-3" src="http://127.0.0.1:5500/Google%20Ads/Landing%20Page.html" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="rounded-3" src="Landing Page.html" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
