--- a/Coding.html
+++ b/Coding.html
@@ -224,12 +224,12 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card my-2">
-                    <iframe class="rounded-3" src="http://127.0.0.1:5500/Coding/Login%20form/login.html#" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="rounded-3" src="login.html#" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="card my-2">
-                    <iframe class="rounded-3" src="http://127.0.0.1:5500/Coding/Test%20Product%20Page/E-commerce%20Page.html" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="rounded-3" src="E-commerce Page.html" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-md-12">
