--- a/Coding.html
+++ b/Coding.html
@@ -224,17 +224,17 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card my-2">
-                    <iframe class="rounded-3" src="login.html#" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="rounded-3" src="Arduf.github.io/login.html" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="card my-2">
-                    <iframe class="rounded-3" src="E-commerce Page.html" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="rounded-3" src="Arduf.github.io/E-commerce Page.html" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="card my-2">
-                    <iframe class="rounded-3" src="Landing Page.html" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="rounded-3" src="Arduf.github.io/Landing Page.html" width="100%" height="800px" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
