--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
   <!-- Learning offcanvas -->
   <div class="offcanvas offcanvas-top h-100" tabindex="-1" id="learningOffcanvas" aria-labelledby="learningOffcanvasLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title dm-serif-text-regular" id="learningOffcanvasLabel">My Learning Journey</h5>
+      <h5 class="offcanvas-title darker-grotesque" id="learningOffcanvasLabel">My Learning Journey</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
       <div class="offcanvas-body">
