--- a/Ads  dataset page.html
+++ b/Ads  dataset page.html
@@ -6,6 +6,13 @@
     <title>Google Ads Learning Session - Campaign Analysis</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        .darker-grotesque {
+            font-family: "Darker Grotesque", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 500;
+            font-style: normal;
+            font-size: 20px;
+        }        
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
@@ -45,7 +52,7 @@
         }
     </style>
 </head>
-<body>
+<body class="darker-grotesque">
     <div class="container">
         <header class="mb-5">
             <h1 class="display-4">Google Ads Learning Session</h1>
