--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         font-style: italic;
       }
 
-
+      /* text hover */
       :root {
         --primary-color: #007bff;
         --secondary-color: #6c757d;
@@ -39,7 +39,6 @@
       }
 
       body {
-        font-family: 'Arial', sans-serif;
         color: var(--text-color);
         background-color: var(--bg-color);
       }
@@ -54,6 +53,7 @@
         z-index: -1;
       }
 
+      /* filter background video to black */
       .video-overlay {
         position: fixed;
         top: 0;
@@ -64,18 +64,18 @@
         z-index: -1;
       }
 
+      /* Animate picture */
       .cover-img {
         width: 100%;
         height: auto;
         transition: transform 0.3s ease;
-        box-shadow: 0 10px 20px rgba(0,0,0,0.2);
       }
 
       .cover-img:hover {
         transform: scale(1.05) rotate(2deg);
       }
 
-      
+      /* offcanvas cards */
       .card-group .card {
         height: 150px;
         overflow: hidden;
@@ -116,6 +116,8 @@
         padding-bottom: 30px;
       }
 
+
+      /* Nav bar */
       .nav-link,
       .btn-container span {
         color: white;
@@ -128,6 +130,8 @@
         transform: translateY(-3px);
       }
 
+
+      /* Social Idcon */
       .social-icons a {
         color: white;
         font-size: 24px;
@@ -140,6 +144,7 @@
         transform: scale(1.2);
       }
 
+      /* Header text of offcanvas */
       .offcanvas-header {
         display: flex;
         justify-content: center;
@@ -150,6 +155,7 @@
         flex-grow: 0;
       }
       
+      /* close learning page */
       .btn-close {
         position: absolute;
         right: 1rem;
@@ -161,6 +167,8 @@
         height: 80vh;
       }
 
+
+      /* learninf card in offcanvas */
       .learning-card {
         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
       }
@@ -187,6 +195,7 @@
         text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
       }
 
+      /* title text */
       .card-title {
         font-size: 1.2rem;
         font-weight: bold;
@@ -194,6 +203,7 @@
         text-align: center;
       }
 
+      /* my name of the top page */
       .name-hover {
         transition: text-shadow 0.3s ease, transform 0.3s ease;
         font-size: 72px;
@@ -203,6 +213,7 @@
         transform: scale(1.05);
       }
 
+      /*animation my picture*/
       .animate-on-scroll {
         opacity: 0;
         transform: translateY(50px);
@@ -214,6 +225,7 @@
         transform: translateY(0);
       }
 
+      /* contact btn */
       .dropdown-menu {
         background-color: rgba(255,255,255,0.9);
         backdrop-filter: blur(10px);
@@ -228,6 +240,7 @@
         color: white;
       }
 
+      /* responsive */
       @media (max-width: 768px) {
         .nav-container {
           padding-top: 15px;
@@ -267,6 +280,7 @@
     </video>
     <div class="video-overlay d-none d-md-block"></div>
 
+    <!-- Nav For Telephone screen -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-md-none">
       <div class="container-fluid">
         <a class="navbar-brand notable-regular" href="#">Thawatchai Sroipho</a>
@@ -286,7 +300,7 @@
                 Contact
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="mailto:drafthawatchai@gmail.com">Email: drafthawatchai@gmail.com</a></li>
+                <li><a class="dropdown-item" href="mailto:thawatchai.sroipho@gmail.com">Email: thawatchai.sroipho@gmail.com</a></li>
                 <li><a class="dropdown-item" href="tel:+66835017328">Phone: 083-501-7328</a></li>
                 <li><a class="dropdown-item" href="#">LineID: meawlow123</a></li>
               </ul>
@@ -296,6 +310,8 @@
       </div>
     </nav>
 
+
+    <!-- Nav For Computer screen-->
     <div class="nav-container w-100 d-none d-md-block">
       <div class="d-flex justify-content-between align-items-center">
         <ul class="nav ms-5" style="font-size: 20px;">
@@ -324,7 +340,7 @@
                 Contact
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item darker-grotesque" href="mailto:drafthawatchai@gmail.com">Email: drafthawatchai@gmail.com</a></li>
+                <li><a class="dropdown-item darker-grotesque" href="mailto:thawatchai.sroipho@gmail.com">Email: thawatchai.sroipho@gmail.com</a></li>
                 <li><a class="dropdown-item darker-grotesque" href="tel:+66835017328">Phone: 083-501-7328</a></li>
                 <li><a class="dropdown-item darker-grotesque" href="#">LineID: meawlow123</a></li>
               </ul>
@@ -414,7 +430,7 @@
   <!-- Learning offcanvas -->
   <div class="offcanvas offcanvas-top h-100" tabindex="-1" id="learningOffcanvas" aria-labelledby="learningOffcanvasLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title darker-grotesque" id="learningOffcanvasLabel">My Learning Journey</h5>
+      <h5 class="offcanvas-title dm-serif-text-regular" id="learningOffcanvasLabel">My Learning Journey</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
       <div class="offcanvas-body">
@@ -468,15 +484,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script>
-      // Smooth scrolling for anchor links
-      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-          e.preventDefault();
-          document.querySelector(this.getAttribute('href')).scrollIntoView({
-            behavior: 'smooth'
-          });
-        });
-      });
 
       // Animate elements on scroll
       function animateOnScroll() {
@@ -495,15 +502,6 @@
 
       // Initialize WOW.js for animations
       new WOW().init();
-
-      // Parallax effect for background
-      window.addEventListener('scroll', function() {
-        const scrollPosition = window.pageYOffset;
-        const videoBackground = document.querySelector('.video-background');
-        if (videoBackground) {
-          videoBackground.style.transform = `translateY(${scrollPosition * 0.5}px)`;
-        }
-      });
 
       // Typing effect for name
       const nameElement = document.querySelector('.name-hover');
