--- a/SEO.html
+++ b/SEO.html
@@ -224,7 +224,7 @@
                   </a>
                 </div>
                 <div class="col">
-                  <a href="https://thasro.dreamhosters.com/?page_id=1046" class="text-decoration-none">
+                  <a href="https://dailyhappyhome.com/" class="text-decoration-none">
                     <div class="card h-100 learning-card animate__animated animate__fadeInUp animate__delay-3s">
                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/WordPress_blue_logo.svg/2048px-WordPress_blue_logo.svg.png" class="card-img-top p-3" alt="WordPress logo">
                       <div class="card-body">
@@ -401,7 +401,7 @@
               </div>
               <div class="col-md-4 col-lg-2 mb-3">
                 <h6 class="text-uppercase font-weight-bold">
-                  <a href="https://thasro.dreamhosters.com/?page_id=1046" class="text-white">WordPress Page</a>
+                  <a href="https://dailyhappyhome.com/" class="text-white">WordPress Page</a>
                 </h6>
               </div>
             </div>
